# notepad-cleanup

./: .ghtraf.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/issue-drafts/: README.md  ai-cli-backends.md  deduplication-pre-step.md
.github/workflows/: create-issue-from-draft.yml  main.yml
docs/: config.md  fuzzy-matching.md  install.md  issue-ai-cli-backends.md  parameters.md
docs/stats/: README.md  index.html
notepad_cleanup/: __init__.py  __main__.py  _version.py  cli.py  config.py  dedup.py  discovery.py  extractor.py  organizer.py  saver.py
notepad_cleanup/prompts/: organize.md
scripts/: create_issue_from_draft.py  install-hooks.sh  paths.sh  update-version.sh
scripts/hooks/: pre-commit  pre-push
tests/one-offs/: _backfill_preview.json  _pre_backfill_state.json  backfill_ghtraf_history.py  spike_full_extraction.py  spike_notepad_uia.py  spike_tab_switching.py  test_config_poc.py  test_dedup_poc.py  test_threshold_curve.py
